--- a/aeon-Demo-TBD/aeon-Demo-TBD.ipynb
+++ b/aeon-Demo-TBD/aeon-Demo-TBD.ipynb
@@ -4,7 +4,7 @@
    "metadata": {},
    "cell_type": "markdown",
    "source": [
-    "# ECML 2024 Demonstration: Classification, Regression and Clustering with aeon\n",
+    "Classification, Regression and Clustering with aeon\n",
     "\n",
     "Required for this notebook:\n",
     "\n",
