--- a/KDD-2024/Notebooks/Features-draft.ipynb
+++ b/KDD-2024/Notebooks/Features-draft.ipynb
@@ -25,7 +25,7 @@
    "source": [
     "## Table of Contents\n",
     "\n",
-    "* [Load Example Data](#load-data-example)\n",
+    "* [Load Example Data](#load-data)\n",
     "* [Simple Summary Statistics](#simple-summary-statistics)\n",
     "    * [Transforming Data](#transforming-data)\n",
     "    * [Classification and Regression](#classification-and-regression)\n",
@@ -62,7 +62,10 @@
   {
    "metadata": {},
    "cell_type": "markdown",
-   "source": "## Load Data Example"
+   "source": [
+    "<a id='load_data'></a>\n",
+    "## Load Data Example"
+   ]
   },
   {
    "metadata": {
@@ -563,9 +566,9 @@
    "source": [
     "## Catch22\n",
     "\n",
-    "The highly comparative time-series analysis (hctsa) [1] toolbox can create over 7700 features for exploratory time series analysis. \n",
+    "The highly comparative time-series analysis (hctsa) [[1,2]](#references) toolbox can create over 7700 features for exploratory time series analysis. \n",
     "\n",
-    "The canonical time series characteristics (Catch22) [2] are 22 hctsa features determined to be the most discriminatory of the full set. \n",
+    "The canonical time series characteristics (Catch22) [3] are 22 hctsa features determined to be the most discriminatory of the full set. \n",
     "\n",
     "The Catch22 were chosen by an evaluation on the UCR datasets. The hctsa features were initially pruned, removing those which are sensitive to mean and variance and any which could not be calculated on over 80\\% of the UCR datasets. A feature evaluation was then performed based on predictive performance. Any features which performed below a threshold were removed. For the remaining features, a hierarchical clustering was performed on the correlation matrix to remove redundancy. From each of the 22 clusters formed, a single feature was selected, taking into account balanced accuracy, computational efficiency and interpretability. The Catch22 features cover a wide range of concepts such as basic statistics of data series values, linear correlations, and entropy."
    ]
@@ -1306,6 +1309,7 @@
     "collapsed": false
    },
    "source": [
+    "<a id='references'></a>\n",
     "## References\n",
     "\n",
     "[1] htsc repo https://github.com/benfulcher/hctsa\n",
