--- a/KDD-2024/Notebooks/Distances-draft.ipynb
+++ b/KDD-2024/Notebooks/Distances-draft.ipynb
@@ -1050,8 +1050,8 @@
    ],
    "source": [
     "# Now, for the shape_dtw distance:\n",
-    "train_dists = shape_dtw_pairwise_distance(X_train_mtser)\n",
-    "test_dists = shape_dtw_pairwise_distance(X_test_mtser, X_train_mtser)\n",
+    "train_dists = shape_dtw_pairwise_distance(X_train_mtser, window=0.1)\n",
+    "test_dists = shape_dtw_pairwise_distance(X_test_mtser, X_train_mtser, window=0.1)\n",
     "knn = KNeighborsRegressor(n_neighbors=1, metric=\"precomputed\")\n",
     "knn.fit(train_dists, y_train_mtser)\n",
     "predictions_mtser = knn.predict(test_dists)\n",
@@ -1062,7 +1062,8 @@
     "# TODO: modify knnregressor to work with callables.\n",
     "knn_aeon = KNeighborsTimeSeriesRegressor(\n",
     "    n_neighbors=1, \n",
-    "    distance=\"shape_dtw\",\n",
+    "    distance=\"shape_dtw\", \n",
+    "    distance_params={\"window\": 0.1}\n",
     ")\n",
     "knn_aeon.fit(X_train_mtser, y_train_mtser)\n",
     "predictions_mtser_aeon = knn_aeon.predict(X_test_mtser)\n",
