--- a/KDD-2024/Notebooks/Distances-draft.ipynb
+++ b/KDD-2024/Notebooks/Distances-draft.ipynb
@@ -924,17 +924,15 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 22,
+   "execution_count": 54,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "MSE of 1-NN (sklearn) with MSM on CardanoSentiment dataset is 0.18409103\n",
-      "MSE of 1-NN (aeon) with MSM on CardanoSentiment dataset is 0.18409103\n",
-      "MSE of 1-NN (sklearn) with TWE on CardanoSentiment dataset is 0.19608050454545453\n",
-      "MSE of 1-NN (aeon) with TWE on CardanoSentiment dataset is 0.19608050454545453\n"
+      "Train shape: (72, 1, 100)\n",
+      "Test shape: (72, 1, 100)\n"
      ]
     }
    ],
@@ -947,7 +945,86 @@
     ")\n",
     "from aeon.regression.distance_based import KNeighborsTimeSeriesRegressor\n",
     "from sklearn.neighbors import KNeighborsRegressor\n",
-    "from sklearn.metrics import mean_squared_error"
+    "from sklearn.metrics import mean_squared_error\n",
+    "\n",
+    "\n",
+    "# Load the univariate TSER dataset as a 3D numpy array\n",
+    "X_train_utser, y_train_utser = load_from_tsfile(\"./data/KDD_UTSER_TRAIN.ts\")\n",
+    "X_test_utser, y_test_utser = load_from_tsfile(\"./data/KDD_UTSER_TEST.ts\")\n",
+    "\n",
+    "print(\"Train shape:\", X_train_utser.shape)\n",
+    "print(\"Test shape:\", X_test_utser.shape)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 55,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "MSE of 1-NN (sklearn) with MSM is 1.3942060469112671\n",
+      "MSE of 1-NN (aeon) with MSM is 1.3942060469112671\n"
+     ]
+    }
+   ],
+   "source": [
+    "train_dists = msm_pairwise_distance(X_train_utser)\n",
+    "test_dists = msm_pairwise_distance(X_test_utser, X_train_utser)\n",
+    "knn = KNeighborsRegressor(n_neighbors=1, metric=\"precomputed\")\n",
+    "knn.fit(train_dists, y_train_utser)\n",
+    "predictions_utser = knn.predict(test_dists)\n",
+    "\n",
+    "mse = mean_squared_error(y_test_utser, predictions_utser)\n",
+    "print(f\"MSE of 1-NN (sklearn) with MSM is {mse}\")\n",
+    "\n",
+    "# TODO: modify knnregressor to work with callables.\n",
+    "knn_aeon = KNeighborsTimeSeriesRegressor(n_neighbors=1, distance=\"msm\")\n",
+    "knn_aeon.fit(X_train_utser, y_train_utser)\n",
+    "predictions_utser_aeon = knn_aeon.predict(X_test_utser)\n",
+    "\n",
+    "mse = mean_squared_error(y_test_utser, predictions_utser_aeon)\n",
+    "print(f\"MSE of 1-NN (aeon) with MSM is {mse}\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 57,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "MSE of 1-NN (sklearn) with TWE is 1.7049822984745453\n",
+      "MSE of 1-NN (aeon) with TWE is 1.7049822984745453\n"
+     ]
+    }
+   ],
+   "source": [
+    "# Now, for the TWE distance:\n",
+    "train_dists = twe_pairwise_distance(X_train_utser, window=0.1)\n",
+    "test_dists = twe_pairwise_distance(X_test_utser, X_train_utser, window=0.1)\n",
+    "knn = KNeighborsRegressor(n_neighbors=1, metric=\"precomputed\")\n",
+    "knn.fit(train_dists, y_train_utser)\n",
+    "predictions_utser = knn.predict(test_dists)\n",
+    "\n",
+    "mse = mean_squared_error(y_test_utser, predictions_utser)\n",
+    "print(f\"MSE of 1-NN (sklearn) with TWE is {mse}\")\n",
+    "\n",
+    "# TODO: modify knnregressor to work with callables.\n",
+    "knn_aeon = KNeighborsTimeSeriesRegressor(\n",
+    "    n_neighbors=1, \n",
+    "    distance=\"twe\", \n",
+    "    distance_params={\"window\": 0.1}\n",
+    ")\n",
+    "knn_aeon.fit(X_train_utser, y_train_utser)\n",
+    "predictions_utser_aeon = knn_aeon.predict(X_test_utser)\n",
+    "\n",
+    "mse = mean_squared_error(y_test_utser, predictions_utser_aeon)\n",
+    "print(f\"MSE of 1-NN (aeon) with TWE is {mse}\")"
    ]
   },
   {
@@ -970,7 +1047,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 36,
+   "execution_count": 51,
    "metadata": {},
    "outputs": [
     {
@@ -1003,7 +1080,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 45,
+   "execution_count": 52,
    "metadata": {},
    "outputs": [
     {
@@ -1036,15 +1113,15 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 48,
+   "execution_count": 53,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "MSE of 1-NN (sklearn) with shape_dtw is 2.195785940731552\n",
-      "MSE of 1-NN (aeon) with shape_dtw is 2.195785940731552\n"
+      "MSE of 1-NN (sklearn) with shape_dtw is 2.452651297147464\n",
+      "MSE of 1-NN (aeon) with shape_dtw is 2.394170743090121\n"
      ]
     }
    ],
