--- a/KDD-2024/Notebooks/Distances-draft.ipynb
+++ b/KDD-2024/Notebooks/Distances-draft.ipynb
@@ -1047,7 +1047,7 @@
     "\n",
     "To avoid repeating content, in this section, we demonstrate the usefulness of the \n",
     "`scikit-learn` kNN aproach coupled with an `aeon` distance for an MTSER \n",
-    "dataset using other two of the most powerful distances: ERP and shapeDTW."
+    "dataset using other two powerful distances: ERP and WDTW."
    ]
   },
   {
@@ -1068,8 +1068,8 @@
     "from aeon.distances import (\n",
     "    erp_distance,\n",
     "    erp_pairwise_distance,\n",
-    "    shape_dtw_distance,\n",
-    "    shape_dtw_pairwise_distance,\n",
+    "    wdtw_distance,\n",
+    "    wdtw_pairwise_distance,\n",
     ")\n",
     "from aeon.regression.distance_based import KNeighborsTimeSeriesRegressor\n",
     "from sklearn.neighbors import KNeighborsRegressor\n",
@@ -1125,33 +1125,33 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "MSE of 1-NN (sklearn) with shape_dtw is 2.452651297147464\n",
-      "MSE of 1-NN (aeon) with shape_dtw is 2.394170743090121\n"
+      "MSE of 1-NN (sklearn) with WDTW is 1.3909486821400647\n",
+      "MSE of 1-NN (aeon) with WDTW is 1.3909486821400647\n"
      ]
     }
    ],
    "source": [
-    "# Now, for the shape_dtw distance:\n",
-    "train_dists = shape_dtw_pairwise_distance(X_train_mtser, window=0.1)\n",
-    "test_dists = shape_dtw_pairwise_distance(X_test_mtser, X_train_mtser, window=0.1)\n",
+    "# Now, for the wdtw distance:\n",
+    "train_dists = wdtw_pairwise_distance(X_train_mtser, window=0.1)\n",
+    "test_dists = wdtw_pairwise_distance(X_test_mtser, X_train_mtser, window=0.1)\n",
     "knn = KNeighborsRegressor(n_neighbors=1, metric=\"precomputed\")\n",
     "knn.fit(train_dists, y_train_mtser)\n",
     "predictions_mtser = knn.predict(test_dists)\n",
     "\n",
     "mse = mean_squared_error(y_test_mtser, predictions_mtser)\n",
-    "print(f\"MSE of 1-NN (sklearn) with shape_dtw is {mse}\")\n",
+    "print(f\"MSE of 1-NN (sklearn) with WDTW is {mse}\")\n",
     "\n",
     "# TODO: modify knnregressor to work with callables.\n",
     "knn_aeon = KNeighborsTimeSeriesRegressor(\n",
     "    n_neighbors=1, \n",
-    "    distance=\"shape_dtw\", \n",
+    "    distance=\"wdtw\", \n",
     "    distance_params={\"window\": 0.1}\n",
     ")\n",
     "knn_aeon.fit(X_train_mtser, y_train_mtser)\n",
     "predictions_mtser_aeon = knn_aeon.predict(X_test_mtser)\n",
     "\n",
     "mse = mean_squared_error(y_test_mtser, predictions_mtser_aeon)\n",
-    "print(f\"MSE of 1-NN (aeon) with shape_dtw is {mse}\")"
+    "print(f\"MSE of 1-NN (aeon) with WDTW is {mse}\")"
    ]
   },
   {
