--- a/KDD-2024/Notebooks/Distances-draft.ipynb
+++ b/KDD-2024/Notebooks/Distances-draft.ipynb
@@ -732,7 +732,8 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Accuracy of 1-NN (sklearn) with DTW is 0.55\n"
+      "Train shape: (40, 100)\n",
+      "Test shape: (40, 100)\n"
      ]
     }
    ],
@@ -742,9 +743,33 @@
     "from aeon.datasets import load_from_tsfile\n",
     "\n",
     "# Load the univariate TSC dataset as a 2D numpy array\n",
-    "X_train_utsc, y_train_utsc = load_from_tsfile(\"./data/KDD_UTSC_TRAIN.ts\", return_type=\"numpy2D\")\n",
-    "X_test_utsc, y_test_utsc = load_from_tsfile(\"./data/KDD_UTSC_TEST.ts\", return_type=\"numpy2D\")\n",
+    "X_train_utsc, y_train_utsc = load_from_tsfile(\n",
+    "    \"./data/KDD_UTSC_TRAIN.ts\", \n",
+    "    return_type=\"numpy2D\"\n",
+    ")\n",
+    "X_test_utsc, y_test_utsc = load_from_tsfile(\n",
+    "    \"./data/KDD_UTSC_TEST.ts\", \n",
+    "    return_type=\"numpy2D\"\n",
+    ")\n",
     "\n",
+    "print(\"Train shape:\", X_train_utsc.shape)\n",
+    "print(\"Test shape:\", X_test_utsc.shape)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 17,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Accuracy of 1-NN (sklearn) with DTW is 0.55\n"
+     ]
+    }
+   ],
+   "source": [
     "knn = KNeighborsClassifier(n_neighbors=1, metric=dtw_distance)\n",
     "knn.fit(X_train_utsc, y_train_utsc)\n",
     "predictions_utsc = knn.predict(X_test_utsc)\n",
@@ -764,7 +789,32 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 18,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Train shape: (40, 1, 100)\n",
+      "Test shape: (40, 1, 100)\n"
+     ]
+    }
+   ],
+   "source": [
+    "from aeon.classification.distance_based import KNeighborsTimeSeriesClassifier\n",
+    "\n",
+    "# Load the univariate TSC dataset as a 3D numpy array\n",
+    "X_train_utsc, y_train_utsc = load_from_tsfile(\"./data/KDD_UTSC_TRAIN.ts\")\n",
+    "X_test_utsc, y_test_utsc = load_from_tsfile(\"./data/KDD_UTSC_TEST.ts\")\n",
+    "\n",
+    "print(\"Train shape:\", X_train_utsc.shape)\n",
+    "print(\"Test shape:\", X_test_utsc.shape)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 19,
    "metadata": {},
    "outputs": [
     {
@@ -776,12 +826,6 @@
     }
    ],
    "source": [
-    "from aeon.classification.distance_based import KNeighborsTimeSeriesClassifier\n",
-    "\n",
-    "# Load the univariate TSC dataset as a 3D numpy array\n",
-    "X_train_utsc, y_train_utsc = load_from_tsfile(\"./data/KDD_UTSC_TRAIN.ts\")\n",
-    "X_test_utsc, y_test_utsc = load_from_tsfile(\"./data/KDD_UTSC_TEST.ts\")\n",
-    "\n",
     "knn_aeon = KNeighborsTimeSeriesClassifier(n_neighbors=1, distance=dtw_distance)\n",
     "knn_aeon.fit(X_train_utsc, y_train_utsc)\n",
     "predictions_utsc_aeon = knn_aeon.predict(X_test_utsc)\n",
@@ -801,7 +845,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 20,
    "metadata": {},
    "outputs": [
     {
@@ -850,7 +894,33 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 21,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Train shape: (40, 4, 100)\n",
+      "Test shape: (40, 4, 100)\n"
+     ]
+    }
+   ],
+   "source": [
+    "from aeon.distances import adtw_pairwise_distance, adtw_distance\n",
+    "from aeon.datasets import load_basic_motions\n",
+    "\n",
+    "# Load the multivariate dataset as a 3D numpy array\n",
+    "X_train_mtsc, y_train_mtsc = load_from_tsfile(\"./data/KDD_MTSC_TRAIN.ts\")\n",
+    "X_test_mtsc, y_test_mtsc = load_from_tsfile(\"./data/KDD_MTSC_TEST.ts\")\n",
+    "\n",
+    "print(\"Train shape:\", X_train_mtsc.shape)\n",
+    "print(\"Test shape:\", X_test_mtsc.shape)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 22,
    "metadata": {},
    "outputs": [
     {
@@ -862,13 +932,6 @@
     }
    ],
    "source": [
-    "from aeon.distances import adtw_pairwise_distance\n",
-    "from aeon.datasets import load_basic_motions\n",
-    "\n",
-    "# Load the multivariate dataset as a 3D numpy array\n",
-    "X_train_mtsc, y_train_mtsc = load_from_tsfile(\"./data/KDD_MTSC_TRAIN.ts\")\n",
-    "X_test_mtsc, y_test_mtsc = load_from_tsfile(\"./data/KDD_MTSC_TEST.ts\")\n",
-    "\n",
     "train_dists = adtw_pairwise_distance(X_train_mtsc)\n",
     "test_dists = adtw_pairwise_distance(X_test_mtsc, X_train_mtsc)\n",
     "\n",
@@ -894,7 +957,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": 23,
    "metadata": {},
    "outputs": [
     {
@@ -906,8 +969,6 @@
     }
    ],
    "source": [
-    "from aeon.distances import adtw_distance\n",
-    "\n",
     "knn_aeon = KNeighborsTimeSeriesClassifier(n_neighbors=1, distance=adtw_distance)\n",
     "knn_aeon.fit(X_train_mtsc, y_train_mtsc)\n",
     "predictions_mtsc_aeon = knn_aeon.predict(X_test_mtsc)\n",
@@ -929,7 +990,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": 24,
    "metadata": {},
    "outputs": [
     {
@@ -963,7 +1024,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 22,
+   "execution_count": 25,
    "metadata": {},
    "outputs": [
     {
@@ -996,7 +1057,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 23,
+   "execution_count": 26,
    "metadata": {},
    "outputs": [
     {
@@ -1052,7 +1113,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 24,
+   "execution_count": 27,
    "metadata": {},
    "outputs": [
     {
@@ -1085,7 +1146,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 25,
+   "execution_count": 28,
    "metadata": {},
    "outputs": [
     {
@@ -1118,7 +1179,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 26,
+   "execution_count": 29,
    "metadata": {},
    "outputs": [
     {
