Add callable distances to TSER

--- a/KDD-2024/Notebooks/Distances-draft.ipynb
+++ b/KDD-2024/Notebooks/Distances-draft.ipynb
@@ -981,6 +981,36 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
+    "For those distances already implemented in `aeon`, we can use their identifier instead \n",
+    "of using the callable distance. For example, the ADTW distance is identified as `\"adtw\"`:"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 24,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Accuracy of 1-NN (aeon) with ADTW is 0.525\n"
+     ]
+    }
+   ],
+   "source": [
+    "knn_aeon = KNeighborsTimeSeriesClassifier(n_neighbors=1, distance=\"adtw\")\n",
+    "knn_aeon.fit(X_train_mtsc, y_train_mtsc)\n",
+    "predictions_mtsc_aeon = knn_aeon.predict(X_test_mtsc)\n",
+    "\n",
+    "accuracy = accuracy_score(y_test_mtsc, predictions_mtsc_aeon)\n",
+    "print(f\"Accuracy of 1-NN (aeon) with ADTW is {accuracy}\")"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
     "# Distance-based Univariate Time Series Extrinsic Regression (UTSER) [10,11]\n",
     "\n",
     "To avoid repeating content, in this section, we demonstrate the usefulness of the \n",
@@ -990,7 +1020,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 24,
+   "execution_count": 25,
    "metadata": {},
    "outputs": [
     {
@@ -1024,7 +1054,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 25,
+   "execution_count": 26,
    "metadata": {},
    "outputs": [
     {
@@ -1046,7 +1076,6 @@
     "mse = mean_squared_error(y_test_utser, predictions_utser)\n",
     "print(f\"MSE of 1-NN (sklearn) with MSM is {mse}\")\n",
     "\n",
-    "# TODO: modify knnregressor to work with callables.\n",
     "knn_aeon = KNeighborsTimeSeriesRegressor(n_neighbors=1, distance=\"msm\")\n",
     "knn_aeon.fit(X_train_utser, y_train_utser)\n",
     "predictions_utser_aeon = knn_aeon.predict(X_test_utser)\n",
@@ -1057,7 +1086,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 26,
+   "execution_count": 27,
    "metadata": {},
    "outputs": [
     {
@@ -1080,10 +1109,9 @@
     "mse = mean_squared_error(y_test_utser, predictions_utser)\n",
     "print(f\"MSE of 1-NN (sklearn) with TWE is {mse}\")\n",
     "\n",
-    "# TODO: modify knnregressor to work with callables.\n",
     "knn_aeon = KNeighborsTimeSeriesRegressor(\n",
     "    n_neighbors=1, \n",
-    "    distance=\"twe\", \n",
+    "    distance=\"twe\",\n",
     "    distance_params={\"window\": 0.1}\n",
     ")\n",
     "knn_aeon.fit(X_train_utser, y_train_utser)\n",
@@ -1113,7 +1141,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 27,
+   "execution_count": 28,
    "metadata": {},
    "outputs": [
     {
@@ -1146,7 +1174,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 28,
+   "execution_count": 29,
    "metadata": {},
    "outputs": [
     {
@@ -1168,7 +1196,6 @@
     "mse = mean_squared_error(y_test_mtser, predictions_mtser)\n",
     "print(f\"MSE of 1-NN (sklearn) with ERP is {mse}\")\n",
     "\n",
-    "# TODO: modify knnregressor to work with callables.\n",
     "knn_aeon = KNeighborsTimeSeriesRegressor(n_neighbors=1, distance=\"erp\")\n",
     "knn_aeon.fit(X_train_mtser, y_train_mtser)\n",
     "predictions_mtser_aeon = knn_aeon.predict(X_test_mtser)\n",
@@ -1179,7 +1206,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 29,
+   "execution_count": 30,
    "metadata": {},
    "outputs": [
     {
@@ -1202,7 +1229,6 @@
     "mse = mean_squared_error(y_test_mtser, predictions_mtser)\n",
     "print(f\"MSE of 1-NN (sklearn) with WDTW is {mse}\")\n",
     "\n",
-    "# TODO: modify knnregressor to work with callables.\n",
     "knn_aeon = KNeighborsTimeSeriesRegressor(\n",
     "    n_neighbors=1, \n",
     "    distance=\"wdtw\", \n",
@@ -1219,7 +1245,38 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "As can be observed, the results achieved for both ways, are the same."
+    "As can be observed, the results achieved for both ways, are the same. Note that \n",
+    "callable distances can also be coupled with the `KNeighborsTimeSeriesRegressor` in \n",
+    "`aeon` as follows:"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 31,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "MSE of 1-NN (aeon) with WDTW as callable function is 1.3909486821400647\n"
+     ]
+    }
+   ],
+   "source": [
+    "# Now, using the WDTW distance as a callable function in aeon:\n",
+    "from aeon.distances import wdtw_distance\n",
+    "\n",
+    "knn_aeon = KNeighborsTimeSeriesRegressor(\n",
+    "    n_neighbors=1, \n",
+    "    distance=wdtw_distance, \n",
+    "    distance_params={\"window\": 0.1}\n",
+    ")\n",
+    "knn_aeon.fit(X_train_mtser, y_train_mtser)\n",
+    "predictions_mtser_aeon = knn_aeon.predict(X_test_mtser)\n",
+    "\n",
+    "mse = mean_squared_error(y_test_mtser, predictions_mtser_aeon)\n",
+    "print(f\"MSE of 1-NN (aeon) with WDTW as callable function is {mse}\")"
    ]
   },
   {
