--- a/KDD-2024/Notebooks/Part 1 Introduction.ipynb
+++ b/KDD-2024/Notebooks/Part 1 Introduction.ipynb
@@ -33,7 +33,12 @@
    "source": [
     "## aeon\n",
     "\n",
-    "The tutorial uses the `aeon` toolkit for machine learning from time series data. The"
+    "The tutorial uses the `aeon` toolkit for machine learning from time series data.\n",
+    "`aeon` is a scikit learning compatible toolkit for tsml. It is organised into\n",
+    "modules for different learning tasks: classification, regression, clustering,\n",
+    "forecasting, anomaly detection, segmentation and similarity search. It also has\n",
+    "building block modules for distances, networks and transformations. The tutorial is\n",
+    "concerned with the classification and regression modules."
    ],
    "metadata": {
     "collapsed": false
