--- a/KDD-2024/Notebooks/part 2 distance based.ipynb
+++ b/KDD-2024/Notebooks/part 2 distance based.ipynb
@@ -4,21 +4,21 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# Distances measures for time series\n",
+    "# Part 2: distances measures and distance based classification and regression\n",
     "\n",
-    "Similarity-based approaches were one of the first proposals for tackling the \n",
+    "Similarity-based approaches were one of the first proposals for tackling the\n",
     "classification and regression of time series. Moveover, this type of techniques are also\n",
     "very common for performing other time series tasks such as clustering, or anomaly\n",
     "detection, among others.\n",
     "\n",
-    "The first part of this notebook introduces the distances implemented in `aeon`, \n",
-    "starting with the simplest, the Euclidean Distance. Then, it introduces the Dynamic\n",
-    "Time Warping distance (DTW), its variants, such as the Amerced DTW (ADTW), or the Shape\n",
+    "The first part of this notebook introduces the distances implemented in `aeon`,\n",
+    "starting with the simplest, the Euclidean distance. Then, it introduces the Dynamic\n",
+    "Time Warping (DTW) distance, its variants, such as Amerced DTW (ADTW), or the Shape\n",
     "DTW (ShapeDTW), and some other alternative distances, such as the Move-Split-Merge (MSM).\n",
     "\n",
     "The second part of this notebook, we demonstrate the use of these distances coupled with\n",
-    "the `KNearestNeighbors` classifier from `scikit-learn`, as well as a more appropriate \n",
-    "implementation of the `KNearestNeighbors` for time series, included in `aeon`. Similarly, \n",
+    "the `KNearestNeighbors` classifier from `scikit-learn`, as well as a more appropriate\n",
+    "implementation of the `KNearestNeighbors` for time series, included in `aeon`. Similarly,\n",
     "approaches for tackling TSER datasets using distance-based approaches are also presented.\n"
    ]
   },
@@ -29,7 +29,7 @@
    "outputs": [],
    "source": [
     "# There are some deprecation warnings present in the notebook, we will ignore them.\n",
-    "# Remove this cell if you are interested in finding out what is changing soon, for \n",
+    "# Remove this cell if you are interested in finding out what is changing soon, for\n",
     "# aeon there will be big changes in out v1.0.0 release!\n",
     "import warnings\n",
     "\n",
@@ -40,8 +40,8 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## Load example data \n",
-    "First of all, lets define two different random univariate time series (a and b) with \n",
+    "## Load example data\n",
+    "First of all, lets define two different random univariate time series (a and b) with\n",
     "length $m=10$, and plot them."
    ]
   },
@@ -145,7 +145,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "More visually, this distance is the squared root of the sum of each squared difference. \n",
+    "More visually, this distance is the squared root of the sum of each squared difference.\n",
     "Obviously, a wider difference means a higher Euclidean distance."
    ]
   },
@@ -174,9 +174,9 @@
     "    # join the points in the path\n",
     "    for i in range(len(path)):\n",
     "        plt.plot(\n",
-    "            [path[i][0], path[i][1]], \n",
-    "            [a[path[i][0]], b[path[i][1]]], \n",
-    "            'k--', \n",
+    "            [path[i][0], path[i][1]],\n",
+    "            [a[path[i][0]], b[path[i][1]]],\n",
+    "            'k--',\n",
     "            alpha=0.2\n",
     "        )\n",
     "        plt.text(\n",
@@ -211,11 +211,11 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Euclidean distance can be also identified as the squared root of sum of the squared \n",
+    "Euclidean distance can be also identified as the squared root of sum of the squared\n",
     "differences of the values in the diagonal of all possibles distances between elements in\n",
-    "both time series. \n",
+    "both time series.\n",
     "\n",
-    "First of all, we compute the distance matrix, which has the distances for all the \n",
+    "First of all, we compute the distance matrix, which has the distances for all the\n",
     "elements in both time series:"
    ]
   },
@@ -257,10 +257,10 @@
     "\n",
     "    # Plot the distance matrix with values.\n",
     "    ax = sns.heatmap(\n",
-    "        distance_matrix, \n",
-    "        annot=True, \n",
-    "        fmt=\".2f\", \n",
-    "        cmap='viridis', \n",
+    "        distance_matrix,\n",
+    "        annot=True,\n",
+    "        fmt=\".2f\",\n",
+    "        cmap='viridis',\n",
     "        ax=ax_gram,\n",
     "        cbar=False,\n",
     "        mask=np.isinf(distance_matrix)\n",
@@ -315,7 +315,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## Edit distances: Dynamic Time Warping (DTW) [1]\n",
+    "## Elastic distances: Dynamic Time Warping (DTW) [1]\n",
     "\n",
     "However, this is not the only way to compute distances between series. DTW allows\n",
     "alignments across time steps, i.e. the time steps do not have to be aligned but the\n",
@@ -396,13 +396,13 @@
    "metadata": {},
    "source": [
     "As can be observed, now, the distances are not computed for the same timepoints. They\n",
-    "are computed considering the collindant timepoints. \n",
+    "are computed considering the collindant timepoints.\n",
     "\n",
     "In this case, the distance is the minimum cost path that satisfies the aforementioned\n",
     "constraints:\n",
     "\n",
-    "(Note that for readability of the path, the starting position should be the last one, \n",
-    "in this case the (9,9), and we move the closest timepoint. For example, from (9,9) we \n",
+    "(Note that for readability of the path, the starting position should be the last one,\n",
+    "in this case the (9,9), and we move the closest timepoint. For example, from (9,9) we\n",
     "can move to: A) (8, 9) with a cost of 1.32, B) (8, 8) with a cost of 1.32, or C) (9, 8)\n",
     "with a cost of 1.17. The latter is the right choice.)"
    ]
@@ -445,13 +445,13 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "It is important to know that DTW warping can be more permisive, and allow a wider \n",
-    "alignment. To control this behaviour, we define another constraint: window size. \n",
+    "It is important to know that DTW warping can be more permisive, and allow a wider\n",
+    "alignment. To control this behaviour, we define another constraint: window size.\n",
     "\n",
     "This windowing constraint avoids aligning points separated by more than a percentage of\n",
-    "the time series length. In other words, if the window constraint is $w$, the \n",
+    "the time series length. In other words, if the window constraint is $w$, the\n",
     "alignment of the $i$-th point can only be performed with points in the interval\n",
-    "$[i - \\lfloor w*m \\rfloor, i +  \\lfloor w*m \\rfloor]$. In the previous scenario, no \n",
+    "$[i - \\lfloor w*m \\rfloor, i +  \\lfloor w*m \\rfloor]$. In the previous scenario, no\n",
     "window size was used (equivalent to have a window constraint of $w=1$.).\n",
     "\n",
     "Now, if we reduce the window length to $w=0.5$, we can see that the path changes:"
@@ -590,7 +590,7 @@
     "- Amerced Dynamic Time Warping (ADTW) [2], which imposes additive penalty for each warping action.\n",
     "- Shape Dynamic Time Warping (ShapeDTW) [3], which scores each alignment of points using information including slope, wavelet transforms and piecewise approximations of the region around the points.\n",
     "- Weighted Dynamic Time Warping (WDTW) [4], which imposes multiplicative penalty based on the distance from the diagonal.\n",
-    "  \n",
+    "\n",
     "All these DTW variants and others are implemented in `aeon`:"
    ]
   },
@@ -713,13 +713,13 @@
     "\n",
     "1. Pass the distance function as a callable to the `metric` parameter in the constructor\n",
     "or\n",
-    "2. Set the `metric` to \"precomputed\" in the constructor and pass a pairwise distance \n",
+    "2. Set the `metric` to \"precomputed\" in the constructor and pass a pairwise distance\n",
     "matrix to `fit` and `predict`.\n",
     "\n",
-    "For this example, we load the gunpoint dataset using a 2D numpy array, which has two \n",
-    "dimensions (n_cases, n_timepoints), given that is the accepted format of `scikit-learn`. \n",
-    "Even though `aeon` allows the use of 2D numpy arrays, generally prefers 3D arrays in the \n",
-    "form (n_cases, n_channels, n_timepoints). For more information on data structures in \n",
+    "For this example, we load the gunpoint dataset using a 2D numpy array, which has two\n",
+    "dimensions (n_cases, n_timepoints), given that is the accepted format of `scikit-learn`.\n",
+    "Even though `aeon` allows the use of 2D numpy arrays, generally prefers 3D arrays in the\n",
+    "form (n_cases, n_channels, n_timepoints). For more information on data structures in\n",
     "`aeon`, please see the [data_formats](../datasets/data_structures.ipynb) notebook."
    ]
   },
@@ -744,11 +744,11 @@
     "\n",
     "# Load the univariate TSC dataset as a 2D numpy array\n",
     "X_train_utsc, y_train_utsc = load_from_tsfile(\n",
-    "    \"./data/KDD_UTSC_TRAIN.ts\", \n",
+    "    \"./data/KDD_UTSC_TRAIN.ts\",\n",
     "    return_type=\"numpy2D\"\n",
     ")\n",
     "X_test_utsc, y_test_utsc = load_from_tsfile(\n",
-    "    \"./data/KDD_UTSC_TEST.ts\", \n",
+    "    \"./data/KDD_UTSC_TEST.ts\",\n",
     "    return_type=\"numpy2D\"\n",
     ")\n",
     "\n",
@@ -782,7 +782,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "`aeon` also includes a version of the kNN approach, specifically designed to deal with \n",
+    "`aeon` also includes a version of the kNN approach, specifically designed to deal with\n",
     "time series. In this case, the input can be a 3D numpy array, which allows the usage\n",
     "of this classifier with a multivariate time series, which we will see later."
    ]
@@ -886,9 +886,9 @@
    "source": [
     "# Distance-based Multivariate TSC (MTSC) [9]\n",
     "\n",
-    "The `scikit-learn` kNN version can not be applied to 3D numpy arrays. However, as we \n",
+    "The `scikit-learn` kNN version can not be applied to 3D numpy arrays. However, as we\n",
     "have just seen, there is a way in which `aeon` time series distances can be coupled with\n",
-    "`scikit-learn` kNN: the use of precomputed pairwise distances (in this case with the \n",
+    "`scikit-learn` kNN: the use of precomputed pairwise distances (in this case with the\n",
     "ADTW distance, to show the variety of distances included in `aeon`):"
    ]
   },
@@ -951,7 +951,7 @@
    "metadata": {},
    "source": [
     "Now, if we run the time series specific kNN approach included in `aeon` we do not need\n",
-    "to precompute the pairwise distance matrix, which sometimes may be computationally \n",
+    "to precompute the pairwise distance matrix, which sometimes may be computationally\n",
     "and memory intensive:"
    ]
   },
@@ -981,7 +981,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "For those distances already implemented in `aeon`, we can use their identifier instead \n",
+    "For those distances already implemented in `aeon`, we can use their identifier instead\n",
     "of using the callable distance. For example, the ADTW distance is identified as `\"adtw\"`:"
    ]
   },
@@ -1013,8 +1013,8 @@
    "source": [
     "# Distance-based Univariate Time Series Extrinsic Regression (UTSER) [10,11]\n",
     "\n",
-    "To avoid repeating content, in this section, we demonstrate the usefulness of the \n",
-    "`scikit-learn` kNN aproach coupled with an `aeon` distance for an UTSER \n",
+    "To avoid repeating content, in this section, we demonstrate the usefulness of the\n",
+    "`scikit-learn` kNN aproach coupled with an `aeon` distance for an UTSER\n",
     "dataset using two of the most powerful distances: MSM and TWE."
    ]
   },
@@ -1110,7 +1110,7 @@
     "print(f\"MSE of 1-NN (sklearn) with TWE is {mse}\")\n",
     "\n",
     "knn_aeon = KNeighborsTimeSeriesRegressor(\n",
-    "    n_neighbors=1, \n",
+    "    n_neighbors=1,\n",
     "    distance=\"twe\",\n",
     "    distance_params={\"window\": 0.1}\n",
     ")\n",
@@ -1134,8 +1134,8 @@
    "source": [
     "# Distance-based Multivariate Time Series Extrinsic Regression (MTSER) [10,11]\n",
     "\n",
-    "To avoid repeating content, in this section, we demonstrate the usefulness of the \n",
-    "`scikit-learn` kNN aproach coupled with an `aeon` distance for an MTSER \n",
+    "To avoid repeating content, in this section, we demonstrate the usefulness of the\n",
+    "`scikit-learn` kNN aproach coupled with an `aeon` distance for an MTSER\n",
     "dataset using other two powerful distances: ERP and WDTW."
    ]
   },
@@ -1230,8 +1230,8 @@
     "print(f\"MSE of 1-NN (sklearn) with WDTW is {mse}\")\n",
     "\n",
     "knn_aeon = KNeighborsTimeSeriesRegressor(\n",
-    "    n_neighbors=1, \n",
-    "    distance=\"wdtw\", \n",
+    "    n_neighbors=1,\n",
+    "    distance=\"wdtw\",\n",
     "    distance_params={\"window\": 0.1}\n",
     ")\n",
     "knn_aeon.fit(X_train_mtser, y_train_mtser)\n",
@@ -1245,8 +1245,8 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "As can be observed, the results achieved for both ways, are the same. Note that \n",
-    "callable distances can also be coupled with the `KNeighborsTimeSeriesRegressor` in \n",
+    "As can be observed, the results achieved for both ways, are the same. Note that\n",
+    "callable distances can also be coupled with the `KNeighborsTimeSeriesRegressor` in\n",
     "`aeon` as follows:"
    ]
   },
@@ -1268,8 +1268,8 @@
     "from aeon.distances import wdtw_distance\n",
     "\n",
     "knn_aeon = KNeighborsTimeSeriesRegressor(\n",
-    "    n_neighbors=1, \n",
-    "    distance=wdtw_distance, \n",
+    "    n_neighbors=1,\n",
+    "    distance=wdtw_distance,\n",
     "    distance_params={\"window\": 0.1}\n",
     ")\n",
     "knn_aeon.fit(X_train_mtser, y_train_mtser)\n",
