--- a/KDD-2024/Notebooks/part1_Introduction.ipynb
+++ b/KDD-2024/Notebooks/part1_Introduction.ipynb
@@ -14,15 +14,15 @@
     " sections, with a separate notebook for each section. The sections are:\n",
     "\n",
     "1. Introduction to Time Series Classification and Regression (this notebook)\n",
-    "2. [Distance based](Part 2 distance based.ipynb)\n",
-    "3. [Convolutions](Part 3 convolution based.ipynb)\n",
-    "4. [Feature based](Part 4 feature based.ipynb)\n",
-    "5. [Interval based](Part 5 interval based.ipynb)\n",
-    "6. [Dictionary based](Part 6 dictionary based.ipynb)\n",
-    "7. [Deep learning based](Part 7 deep learning based.ipynb)\n",
-    "8. [Shapelet based](Part 8 shapelet based.ipynb)\n",
-    "9. [Hybrids](Part 9 hybrids.ipynb)\n",
-    "10. [Conclusions and future directions](Part 10 conclusions.ipynb)\n"
+    "2. [Distance based](./part2_distance_based.ipynb)\n",
+    "3. [Convolutions](./part3_convolution_based.ipynb)\n",
+    "4. [Feature based](./part4_feature_based.ipynb)\n",
+    "5. [Interval based](./part5_interval_based.ipynb)\n",
+    "6. [Dictionary based](./part6_dictionary_based.ipynb)\n",
+    "7. [Deep learning based](./part7_deep_learning_based.ipynb)\n",
+    "8. [Shapelet based](./part8_shapelet_based.ipynb)\n",
+    "9. [Hybrids](./part9_hybrids.ipynb)\n",
+    "10. [Conclusions and future directions](./part10_conclusions.ipynb)\n"
    ],
    "metadata": {
     "collapsed": false
