--- a/KDD-2024/Notebooks/part1_Introduction.ipynb
+++ b/KDD-2024/Notebooks/part1_Introduction.ipynb
@@ -8,14 +8,13 @@
     "# An Introduction to Time Series Classification (TSC) and Regression (TSER)\n",
     "\n",
     "This is the notebook associated with the introduction to the hands-on tutorial on time\n",
-    "series classification and regression. The tutorial website is [here]\n",
-    "(https://aeon-tutorials.github.io/KDD-2024/) and the structure is\n",
+    "series classification and regression. The tutorial website is [here](https://aeon-tutorials.github.io/KDD-2024/) and the structure is\n",
     "listed [here](https://aeon-tutorials.github.io/KDD-2024/schedule.html). There are ten\n",
     " sections, with a separate notebook for each section. The sections are:\n",
     "\n",
     "1. Introduction to Time Series Classification and Regression (this notebook)\n",
     "2. [Distance based](./part2_distance_based.ipynb)\n",
-    "3. [Convolutions](./part3_convolution_based.ipynb)\n",
+    "3. [Convolution based](./part3_convolution_based.ipynb)\n",
     "4. [Feature based](./part4_feature_based.ipynb)\n",
     "5. [Interval based](./part5_interval_based.ipynb)\n",
     "6. [Dictionary based](./part6_dictionary_based.ipynb)\n",
@@ -65,8 +64,9 @@
     "problem to demonstrate functionality.\n",
     "\n",
     "`aeon` ships with some standard UCR and UEA datasets, and can download them all\n",
-    "directly from timeseriesclassification.com. See this [notebook](https://github.com/aeon-toolkit/aeon-neuro/blob/main/examples/data_loading.ipynb) for more\n",
-    "examples of data loading."
+    "directly from timeseriesclassification.com. See this [notebook](https://github\n",
+    ".com/aeon-toolkit/aeon-neuro/blob/main/examples/data_loading.ipynb) for details of\n",
+    "the data formatting of this EEG data."
    ],
    "metadata": {
     "collapsed": false
