--- a/KDD-2024/Notebooks/part1_Introduction.ipynb
+++ b/KDD-2024/Notebooks/part1_Introduction.ipynb
@@ -64,8 +64,7 @@
     "problem to demonstrate functionality.\n",
     "\n",
     "`aeon` ships with some standard UCR and UEA datasets, and can download them all\n",
-    "directly from timeseriesclassification.com. See this [notebook](https://github\n",
-    ".com/aeon-toolkit/aeon-neuro/blob/main/examples/data_loading.ipynb) for details of\n",
+    "directly from timeseriesclassification.com. See this [notebook](https://github.com/aeon-toolkit/aeon-neuro/blob/main/examples/data_loading.ipynb) for details of\n",
     "the data formatting of this EEG data."
    ],
    "metadata": {
