add to convolutions and move related talks

--- a/KDD-2024/Notebooks/part2_distance_based.ipynb
+++ b/KDD-2024/Notebooks/part2_distance_based.ipynb
@@ -1,15 +1,18 @@
 {
  "cells": [
   {
+   "metadata": {},
+   "cell_type": "markdown",
+   "source": "`KDD2024 Tutorial / A Hands-On Introduction to Time Series Classification and Regression`"
+  },
+  {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# Part 2: distances measures and distance based classification and regression\n",
+    "# Distance measures for time series and distance-based classification and regression\n",
     "\n",
-    "Similarity-based approaches were one of the first proposals for tackling the\n",
-    "classification and regression of time series. Moveover, this type of techniques are also\n",
-    "very common for performing other time series tasks such as clustering, or anomaly\n",
-    "detection, among others.\n",
+    "Similarity/distance-based approaches were one of the first proposals for tackling the classification and regression of time series. Moreover, these types of techniques are also\n",
+    "widespread in other time series learning tasks such as clustering or anomaly detection, among others.\n",
     "\n",
     "The first part of this notebook introduces the distances implemented in `aeon`,\n",
     "starting with the simplest, the Euclidean distance. Then, it introduces the Dynamic\n",
